--- a/src/components/Background/Background.module.scss
+++ b/src/components/Background/Background.module.scss
@@ -2,9 +2,9 @@
   position: fixed;
   top: 0;
   right: 0;
-  bottom: 0; 
+  bottom: 0;
   left: 0;
-  background-color: black;
+  background-color: #000;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -26,7 +26,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  bottom: 0; 
+  bottom: 0;
   left: 0;
 }
 
