--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -12,7 +12,7 @@
   flex-direction: row;
   border-radius: 8px;
   overflow: hidden;
-  box-shadow: 0 2px 4px rgba(black , .2), 0 -1px 0px rgba(black , .02);
+  box-shadow: 0 2px 4px rgba(#000 , 0.2), 0 -1px 0 rgba(#000 , 0.02);
 }
 
 .search {
@@ -22,14 +22,14 @@
   padding: 0 16px;
   flex: 1;
   border: none;
-  background-color: white;
-  color: black;
+  background-color: #fff;
+  color: #000;
 }
 
 .submit {
   position: relative;
   width: 48px;
-  background-color: white;
+  background-color: #fff;
   border: none;
   cursor: pointer;
   outline: none;
@@ -59,7 +59,7 @@
   align-items: center;
   opacity: 1;
   visibility: visible;
-  transition-duration: .25s;
+  transition-duration: 0.25s;
   transition-property: opacity, visibility;
   transition-timing-function: ease;
 
@@ -72,7 +72,7 @@
   svg {
     width: 18px;
     height: 18px;
-    fill: black;
+    fill: #000;
   }
 }
 
@@ -84,7 +84,7 @@
   transform: translate(-10px, -10px);
   opacity: 0;
   visibility: hidden;
-  transition-duration: .25s;
+  transition-duration: 0.25s;
   transition-property: opacity, visibility;
   transition-timing-function: ease;
 
