--- a/src/styles/generic/_scaffolding.scss
+++ b/src/styles/generic/_scaffolding.scss
@@ -1,6 +1,6 @@
 html {
   line-height: 1.5;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
